Fix layout issue in project card componenet.

--- a/css/styles.css
+++ b/css/styles.css
@@ -408,7 +408,7 @@ main {
 }
 
 .file-icon, .github-project-icon {
-    width: 20px;
+    width: 15px;
 
 }
 
@@ -459,7 +459,7 @@ main {
 }
 
 .project-desc {
-    padding-top: 20px;
+    padding-top: 5px;
 
 }
 
